--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
       <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300" rel="stylesheet">
   </head>
   
-  <body background="surf.jpg">
+  <body background="surf.JPG">
 
    <div class="surf"> <!-- surf container -->
       <!-- nav container -->
