--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- footer-->
         <footer class="footer">
           <a href="mailto:chrisoreilly11@gmail.com"><img src="mail.png" alt="Mail Logo" class="social-icon rounded-circle"></a>
-          <a href="https://github.com/chrisoreilly11"><img src="Github-32px.png" alt="Github Logo" class="social-icon rounded-circle"></a>
+          <a href="https://github.com/chrisoreilly11"><img src="GitHub-32px.png" alt="Github Logo" class="social-icon rounded-circle"></a>
           <a href="https://www.youtube.com/channel/UChNMWKpfHVOq11ulQ__SOVg"><img src="youtube.png" alt="Facebook Logo" class="social-icon rounded-circle"></a>
         </footer><!-- /footer -->
     </div><!-- /yellow container -->
