--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
       <link rel="stylesheet" href="responsive.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300" rel="stylesheet">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145078493-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-145078493-1');
+      </script>
   </head>
   <body background="utah.jpg">
    <!-- yellow container -->
