--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -21,7 +21,7 @@
               <a class="nav-link about" href="index.html">Home</a>
             </li>
             <li class="nav-item about">
-              <a class="nav-link" href="https://github.com/chrisoreilly11">Projects</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item about">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -38,9 +38,9 @@
 
         <!-- footer-->
         <footer class="footer">
-          <a href="mailto:chrisoreilly11@gmail.com"><img src="img/mail.png" alt="Mail Logo" class="social-icon rounded-circle"></a>
-          <a href="https://github.com/chrisoreilly11"><img src="img/Github-32px.png" alt="Github Logo" class="social-icon rounded-circle"></a>
-          <a href="https://www.youtube.com/channel/UChNMWKpfHVOq11ulQ__SOVg"><img src="img/youtube.png" alt="Facebook Logo" class="social-icon rounded-circle"></a>
+          <!-- <a href="mailto:chrisoreilly11@gmail.com"><img src="img/mail.png" alt="Mail Logo" class="social-icon rounded-circle"></a> -->
+         <!--  <a href="https://github.com/chrisoreilly11"><img src="img/Github-32px.png" alt="Github Logo" class="social-icon rounded-circle"></a>
+          <a href="https://www.youtube.com/channel/UChNMWKpfHVOq11ulQ__SOVg"><img src="img/youtube.png" alt="Facebook Logo" class="social-icon rounded-circle"></a> -->
         </footer><!-- /footer -->
 
 
