--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -14,20 +14,35 @@
 
 	<body background="img/leafs.jpg">
 
-      <!-- nav container -->
-      <nav class="container3">
+     <!-- nav container -->
+      <nav class="container-nav-projects">
           <ul class="nav justify-content-center">
             <li class="nav-item">
               <a class="nav-link about" href="index.html">Home</a>
             </li>
             <li class="nav-item about">
-              <a class="nav-link" href="https://github.com/chrisoreilly11">Projects</a>
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item about">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+          </ul>
+      </nav><!-- /nav container -->
+
+      <!-- nav container -->
+      <!-- <nav class="container3">
+          <ul class="nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link about" href="index.html">Home</a>
+            </li>
+            <li class="nav-item about">
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
           </ul>
-      </nav><!-- /nav container -->
+      </nav> --><!-- /nav container -->
 
 		<!-- contact container -->
 		<div class="center-div">
