--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,6 +9,16 @@
       <link rel="stylesheet" href="css/responsive.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300" rel="stylesheet">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145078493-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-145078493-1');
+      </script>
+
   </head>
   <body background="img/utah.jpg">
    <!-- yellow container -->
@@ -20,7 +30,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://github.com/chrisoreilly11">Projects</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -30,9 +40,9 @@
 
         <!-- footer-->
         <footer class="footer">
-          <a href="mailto:chrisoreilly11@gmail.com"><img src="img/mail.png" alt="Mail Logo" class="social-icon rounded-circle"></a>
-          <a href="https://github.com/chrisoreilly11"><img src="img/Github-32px.png" alt="Github Logo" class="social-icon rounded-circle"></a>
-          <a href="https://www.youtube.com/channel/UChNMWKpfHVOq11ulQ__SOVg"><img src="img/youtube.png" alt="Facebook Logo" class="social-icon rounded-circle"></a>
+          <!-- <a href="mailto:chrisoreilly11@gmail.com"><img src="img/mail.png" alt="Mail Logo" class="social-icon rounded-circle"></a> -->
+          <!-- <a href="https://github.com/chrisoreilly11"><img src="img/Github-32px.png" alt="Github Logo" class="social-icon rounded-circle"></a>
+          <a href="https://www.youtube.com/channel/UChNMWKpfHVOq11ulQ__SOVg"><img src="img/youtube.png" alt="Facebook Logo" class="social-icon rounded-circle"></a> -->
         </footer><!-- /footer -->
     </div><!-- /yellow container -->
 
