--- a/contact.html
+++ b/contact.html
@@ -4,40 +4,45 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Chris O'Reilly</title>
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145078493-1"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-145078493-1');
-      </script>
-      <!-- /Global site tag (gtag.js) - Google Analytics -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-      <link rel="stylesheet" href="main.css"> 
-      <link rel="stylesheet" href="responsive.css">
+      <link rel="stylesheet" href="css/main.css"> 
+      <link rel="stylesheet" href="css/responsive.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300" rel="stylesheet">
   </head>
 
 
-	<body background="leafs.jpg">
+	<body background="img/leafs.jpg">
 
-      <!-- nav container -->
-      <nav class="container3">
+     <!-- nav container -->
+      <nav class="container-nav-projects">
           <ul class="nav justify-content-center">
             <li class="nav-item">
               <a class="nav-link about" href="index.html">Home</a>
             </li>
             <li class="nav-item about">
-              <a class="nav-link" href="https://github.com/chrisoreilly11">Projects</a>
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item about">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+          </ul>
+      </nav><!-- /nav container -->
+
+      <!-- nav container -->
+      <!-- <nav class="container3">
+          <ul class="nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link about" href="index.html">Home</a>
+            </li>
+            <li class="nav-item about">
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
           </ul>
-      </nav><!-- /nav container -->
+      </nav> --><!-- /nav container -->
 
 		<!-- contact container -->
 		<div class="center-div">
