--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Chris O'Reilly</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+      <link rel="stylesheet" href="css/main.css"> 
+      <link rel="stylesheet" href="css/responsive.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300" rel="stylesheet">
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145078493-1"></script>
       <script>
@@ -13,15 +18,9 @@
 
         gtag('config', 'UA-145078493-1');
       </script>
-      <!-- /Global site tag (gtag.js) - Google Analytics -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-      <link rel="stylesheet" href="main.css"> 
-      <link rel="stylesheet" href="responsive.css">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300" rel="stylesheet">
-    
+
   </head>
-  <body background="utah.jpg">
+  <body background="img/utah.jpg">
    <!-- yellow container -->
    <div class="yellow">
       <!-- nav container -->
@@ -31,7 +30,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://github.com/chrisoreilly11">Projects</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -41,9 +40,9 @@
 
         <!-- footer-->
         <footer class="footer">
-          <a href="mailto:chrisoreilly11@gmail.com"><img src="mail.png" alt="Mail Logo" class="social-icon rounded-circle"></a>
-          <a href="https://github.com/chrisoreilly11"><img src="GitHub-32px.png" alt="Github Logo" class="social-icon rounded-circle"></a>
-          <a href="https://www.youtube.com/channel/UChNMWKpfHVOq11ulQ__SOVg"><img src="youtube.png" alt="Facebook Logo" class="social-icon rounded-circle"></a>
+          <!-- <a href="mailto:chrisoreilly11@gmail.com"><img src="img/mail.png" alt="Mail Logo" class="social-icon rounded-circle"></a> -->
+          <!-- <a href="https://github.com/chrisoreilly11"><img src="img/Github-32px.png" alt="Github Logo" class="social-icon rounded-circle"></a>
+          <a href="https://www.youtube.com/channel/UChNMWKpfHVOq11ulQ__SOVg"><img src="img/youtube.png" alt="Facebook Logo" class="social-icon rounded-circle"></a> -->
         </footer><!-- /footer -->
     </div><!-- /yellow container -->
 
