took out css/ and img/
layout of files in github

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </script>
 
   </head>
-  <body background="img/utah.jpg">
+  <body background="utah.jpg">
    <!-- yellow container -->
    <div class="yellow">
       <!-- nav container -->
