--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Chris O'Reilly</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-      <link rel="stylesheet" href="css/main.css"> 
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="main.css"> 
+      <link rel="stylesheet" href="responsive.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300" rel="stylesheet">
   </head>
 
 
-	<body background="img/leafs.jpg">
+	<body background="leafs.jpg">
 
      <!-- nav container -->
       <nav class="container-nav-projects">
