took out css/ and img/

--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Chris O'Reilly</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-      <link rel="stylesheet" href="css/main.css"> 
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="main.css"> 
+      <link rel="stylesheet" href="responsive.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300" rel="stylesheet">
   </head>
@@ -36,7 +36,7 @@
                 <div class="project shadow-large">
                     <div class="project-image">
                       <a href="https://farmerandtheowl.com">
-                        <img src="img/farmowl-home.png" />
+                        <img src="farmowl-home.png" />
                       </a>
                     </div>
                     <!-- End .project-image -->
@@ -56,7 +56,7 @@
                 <div class="project shadow-large">
                     <div class="project-image">
                       <a href="http://www.lalalas.com.au">
-                        <img src="img/lalalas.png" />
+                        <img src="lalalas.png" />
                       </a>
                     </div>
                     <!-- End .project-image -->
@@ -76,7 +76,7 @@
                 <div class="project shadow-large">
                     <div class="project-image">
                         <a href="http://thirroulmusicfestival.com.au">
-                          <img src="img/tmf-home.png" />
+                          <img src="tmf-home.png" />
                         </a>
                     </div>
                     <!-- End .project-image -->
@@ -96,7 +96,7 @@
                 <div class="project shadow-large">
                     <div class="project-image">
                       <a href="https://verbsyndicate.com/artists-working/">
-                        <img src="img/verb-artist.png" />
+                        <img src="verb-artist.png" />
                       </a>
                     </div>
                     <!-- End .project-image -->
@@ -116,7 +116,7 @@
                 <div class="project shadow-large">
                     <div class="project-image">
                       <a href="http://surftripcountdown.com">
-                        <img src="img/surftripcountdown.png" />
+                        <img src="surftripcountdown.png" />
                       </a>
                     </div>
                     <!-- End .project-image -->
