added new project - Win Sales

--- a/projects.html
+++ b/projects.html
@@ -93,6 +93,26 @@
                 </div>
                 <!-- End .project -->
 
+                  <div class="project shadow-large">
+                    <div class="project-image">
+                      <a href="https://winillawarrasales.com.au/staging2">
+                        <img src="win-thumbnail.png" />
+                      </a>
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Win Network</h3>
+                        <p>
+                            Creation of a website for Win network to showcase advertising packages to potential clients. Built using Wordpress.
+                        </p>
+                        <div class="project-link">
+                          <a href="https://winillawarrasales.com.au/staging2">View Project</a>
+                        </div>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+              
                 <div class="project shadow-large">
                     <div class="project-image">
                       <a href="https://verbsyndicate.com/artists-working/">
