--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,27 @@
         <div class="container-projects">
             <div class="row">
               
+                  <!-- Start .project -->
+                  <div class="project shadow-large">
+                    <div class="project-image">
+                        <a href="https://www.moorestreetgeneral.com.au">
+                          <img src="tmf-home.png" />
+                        </a>
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Moore Street General</h3>
+                        <p>
+                            Freelance project of my favourite local cafe. I managed the project from beginning to launch by organizing a professional photoshoot, development, and shaping the clients design to her 'simple & clean' brand guidelines. This site was built using the Squarespace platform. 
+                        </p>
+                        <div class="project-link">
+                          <a href="https://www.moorestreetgeneral.com.au">View Project</a>
+                        </div>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+              
                  <!-- Start .project -->
                  <div class="project shadow-large">
                     <div class="project-image">
