--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
                   <div class="project shadow-large">
                     <div class="project-image">
                         <a href="https://www.moorestreetgeneral.com.au">
-                          <img src="tmf-home.png" />
+                          <img src="msg.png" />
                         </a>
                     </div>
                     <!-- End .project-image -->
