--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -27,7 +27,7 @@
       <nav class="container">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="https://docs.google.com/document/d/1rcFBZTJ4k4l8oxdAb_sSUfdD_NXBPPdWImz_tA1SoUM/edit?usp=sharing">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html">Projects</a>
