--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
               <a class="nav-link about" href="index.html">Home</a>
             </li>
             <li class="nav-item about">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="https://docs.google.com/document/d/1rcFBZTJ4k4l8oxdAb_sSUfdD_NXBPPdWImz_tA1SoUM/edit?usp=sharing">About</a>
             </li>
             <li class="nav-item about">
               <a class="nav-link" href="projects.html">Projects</a>
