--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 			    <div class="contact-container">
 			     <h2>Contact Me</h2>
 			     <p>email: <a href="mailto:chrisoreilly11@gmail.com" class="email-text">chrisoreilly11@gmail.com</a></p>
-				    <p>phone: <a href="tel:0423 423 458"</a></p>
+				    <p>phone: <a href="tel:0423 423 458" class="email-text">0423 423 458</a></p>
 		    	</div>
 		       </div>
 		  </div>
