--- a/projects.html
+++ b/projects.html
@@ -163,7 +163,7 @@
                 <!-- Start .project -->
                 <div class="project shadow-large">
                     <div class="project-image">
-                      <a href="https://verbsyndicate.com/artists-working/">
+                      <a href="https://verbsyndicate.com/artists/">
                         <img src="verb-artist.png" />
                       </a>
                     </div>
