--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -95,7 +95,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                      <a href="https://verbsyndicate.com/artists-working/">
+                      <a href="https://verbsyndicate.com/artists/">
                         <img src="img/verb-artist.png" />
                       </a>
                     </div>
@@ -106,7 +106,7 @@
                             Redesign of Artist page for Verb Syndicate. Created carousel using wordpress plugins to show all artist that have collaborated with the company.
                         </p>
                         <div class="project-link">
-                          <a href="https://verbsyndicate.com/artists-working/">View Project</a>
+                          <a href="https://verbsyndicate.com/artists/">View Project</a>
                         </div>
                     </div>
                     <!-- End .project-info -->
