updated url link

--- a/projects.html
+++ b/projects.html
@@ -174,7 +174,7 @@
                             Redesign of Artist page for Verb Syndicate. Created carousel using wordpress plugins to show all artist that have collaborated with the company.
                         </p>
                         <div class="project-link">
-                          <a href="https://verbsyndicate.com/artists-working/">View Project</a>
+                          <a href="https://verbsyndicate.com/artists/">View Project</a>
                         </div>
                     </div>
                     <!-- End .project-info -->
