--- a/projects.html
+++ b/projects.html
@@ -213,7 +213,7 @@
                     <div class="project-info">
                         <h3>Win Network</h3>
                         <p>
-                            Creation of a website for Win network to showcase advertising packages to potential clients. Built using Wordpress.
+                            Creation of a password protected website for Win network to showcase advertising packages to potential clients. Built using Wordpress.
                         </p>
                         <div class="project-link">
                           <a href="https://winillawarrasales.com.au/staging2">View Project</a>
